<resources>
    <string name="app_name">Sorvetunes</string>
    <string name="mensagem_inicial">Bem Vindo!!! ao Sorvetunes</string>
    <string name="mensagem_login">Seja Bem vindo!!!</string>
    <string name="mensagem_login_usuario">Usuário:</string>
    <string name="mensagem_login_senha">Senha:</string>

    <!-- Text Input -->
    <string name="text_input_user">Digite o seu Usuário.</string>
    <string name="text_input_password">Digite a sua Senha.</string>

    <!-- Botões -->
    <string name="botao_user">Login</string>
    <string name="botao_voltar_home">Voltar para Home</string>
    <string name="botao_voltar_login">Voltar para Login</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sobre_sorvetunes">A Sovertunes é uma empresa com
        mais 5 anos de experiência na fabricação de sorvetes. Sempre
        trazendo novidades de sabores e texturas para alegar a vida
        de seus clientes, sempre com qualidade em seus processos
        de fabricação.\n

        \nGosta de sorvetes adocicados, supercremosos e feitos com
        ingredientes de qualidade? O seu lugar é aqui. Sempre de
        olho na produção, a Sovertunes sugere sua linha
        de sabores criativos.\n

        \nVeja nossos produtos!!!\n

        \n  * Açaís \n
        \n  * Sorvetes de Potes \n
        \n  * Sorvetes de massa \n
        \n  * Paletas \n
        \n  * Picolés \n
        \n  * Delicias Gelatas \n
        \n  * Casquinhas \n
    </string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>

    <string name="digital">Digital.</string>
    <string name="guardar">Guardar dados.</string>
    <string name="switch_admin">Sim</string>
    <string name="formnome">Nome</string>
    <string name="formdescricao">Descrição</string>
    <string name="formfoto">Foto</string>
    <string name="form_valor">Valor</string>
    <string name="editformnome">Editar Nome</string>
    <string name="editformdescricao">Editar Descrição</string>
    <string name="editformfoto">Editar Foto</string>
    <string name="editformvalor">Editar Valor</string>
    <string name="save_button">Salvar</string>

</resources>