<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview_login"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/mensagem_login"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/rosa_sorvetunes"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/mensagem_login_usuario"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/verde_sorvetunes"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/input_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:ems="15"
        android:inputType="textPersonName"
        android:hint="@string/text_input_user"/>

    <TextView
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/mensagem_login_senha"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/verde_sorvetunes"
        />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:ems="15"
        android:hint="@string/text_input_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/campo_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Lembrar Login" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <Button
            android:id="@+id/botao_login"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/botao_user"
            android:layout_marginTop="20dp"
            android:layout_gravity="start"

            />

        <ProgressBar
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            android:layout_gravity="end"

            />

    </LinearLayout>



</LinearLayout>